[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccm_proj_tools"
version = "0.1.0"
description = "Tools for managing CCM/EDM workflows and project configuration."
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "pandas",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "PyYAML",
    "cloudpickle",
    "joblib",
    "pyleoclim @ git+https://github.com/LinkedEarth/Pyleoclim_util.git",
    "pyEDM @ git+https://github.com/jordanplanders/pyEDM.git@5defad56bab1d673a38f6b375a78d7319ac1c8e1"
]

[tool.setuptools]
package-dir = {"" = "ccm_proj_tools"}

[tool.setuptools.packages.find]
where = ["ccm_proj_tools"]
include = ["*"]
exclude = ["archive2"]
